WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 112143
[BlackBerry] GraphicsLayer: fix code that was accidentally reverted
https://bugs.webkit.org/show_bug.cgi?id=112143
Summary
[BlackBerry] GraphicsLayer: fix code that was accidentally reverted
Alberto Garcia
Reported
2013-03-12 06:38:56 PDT
Several changes were accidentally reverted in
r144465
due to the upstreaming of some new code: - clearBackgroundColor() and m_contentsLayerHasBackgroundColor had been removed in
r137798
. - showDebugBorders() had been renamed to isShowingDebugBorder() in
r133517
. - A new GraphicsLayer::create() overload had been introduced in
r130185
.
Attachments
Patch
(5.21 KB, patch)
2013-03-12 06:40 PDT
,
Alberto Garcia
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alberto Garcia
Comment 1
2013-03-12 06:40:34 PDT
Created
attachment 192724
[details]
Patch
Rob Buis
Comment 2
2013-03-12 08:26:38 PDT
Comment on
attachment 192724
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=192724&action=review
> Source/WebCore/platform/graphics/blackberry/GraphicsLayerBlackBerry.cpp:-810 > - return;
Do we need this kind of check for m_layer? Or is it guarenteed to be non-null?
Alberto Garcia
Comment 3
2013-03-13 00:38:50 PDT
(In reply to
comment #2
)
> (From update of
attachment 192724
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=192724&action=review
> > > Source/WebCore/platform/graphics/blackberry/GraphicsLayerBlackBerry.cpp:-810 > > - return; > > Do we need this kind of check for m_layer? Or is it guarenteed to be non-null?
m_layer is initialized in the constructor so it's guaranteed to always have a value. There's actually a check in GraphicsLayerBlackBerry::willBeDestroyed() that we should be able to remove: if (m_layer) m_layer->setOwner(0);
Rob Buis
Comment 4
2013-03-21 12:28:09 PDT
Comment on
attachment 192724
[details]
Patch LGTM.
WebKit Review Bot
Comment 5
2013-03-21 12:38:36 PDT
Comment on
attachment 192724
[details]
Patch Clearing flags on attachment: 192724 Committed
r146499
: <
http://trac.webkit.org/changeset/146499
>
WebKit Review Bot
Comment 6
2013-03-21 12:38:39 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug