[BlackBerry] GraphicsLayer: fix code that was accidentally reverted https://bugs.webkit.org/show_bug.cgi?id=112143

Patch by Alberto Garcia <agarcia@igalia.com> on 2013-03-21
Reviewed by Rob Buis.

Several changes were accidentally reverted in r144465 due to the
upstreaming of some new code:

- clearBackgroundColor() and m_contentsLayerHasBackgroundColor had
  been removed in r137798.

- showDebugBorders() had been renamed to isShowingDebugBorder() in
  r133517.

- A new GraphicsLayer::create() overload had been introduced in
  r130185.

This patch fixes them all.

* platform/graphics/blackberry/GraphicsLayerBlackBerry.cpp:
(WebCore::GraphicsLayer::create):
(WebCore):
(WebCore::GraphicsLayerBlackBerry::GraphicsLayerBlackBerry):
(WebCore::GraphicsLayerBlackBerry::setBackgroundColor):
(WebCore::GraphicsLayerBlackBerry::updateLayerBackgroundColor):
(WebCore::GraphicsLayerBlackBerry::setupContentsLayer):
* platform/graphics/blackberry/GraphicsLayerBlackBerry.h:
(GraphicsLayerBlackBerry):

Canonical link: https://commits.webkit.org/131280@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146499 268f45cc-cd09-0410-ab3c-d52691b4dbfc